LDEV-4440, LDEV-3275 Update XStream source code