@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2006 Joe Walnes.
- * Copyright (C) 2006, 2007, 2011, 2013, 2014 XStream Committers.
+ * Copyright (C) 2006, 2007, 2011, 2013 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -11,6 +11,11 @@
  */
 package com.thoughtworks.xstream.io.binary;
 
+import com.thoughtworks.xstream.converters.ErrorWriter;
+import com.thoughtworks.xstream.io.ExtendedHierarchicalStreamReader;
+import com.thoughtworks.xstream.io.HierarchicalStreamReader;
+import com.thoughtworks.xstream.io.StreamException;
+
 import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -18,15 +23,10 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 
-import com.thoughtworks.xstream.converters.ErrorWriter;
-import com.thoughtworks.xstream.io.ExtendedHierarchicalStreamReader;
-import com.thoughtworks.xstream.io.HierarchicalStreamReader;
-import com.thoughtworks.xstream.io.StreamException;
-
-
 /**
- * A HierarchicalStreamReader that reads from a binary stream created by {@link BinaryStreamWriter}.
- * 
+ * A HierarchicalStreamReader that reads from a binary stream created by
+ * {@link BinaryStreamWriter}.
+ *
  * @author Joe Walnes
  * @see BinaryStreamReader
  * @since 1.2
@@ -40,119 +40,109 @@ public class BinaryStreamReader implements ExtendedHierarchicalStreamReader {
     private Token pushback;
     private final Token.Formatter tokenFormatter = new Token.Formatter();
 
-    public BinaryStreamReader(final InputStream inputStream) {
+    public BinaryStreamReader(InputStream inputStream) {
         in = new DataInputStream(inputStream);
         moveDown();
     }
 
-    @Override
     public boolean hasMoreChildren() {
         return depthState.hasMoreChildren();
     }
 
-    @Override
     public String getNodeName() {
         return depthState.getName();
     }
 
-    @Override
     public String getValue() {
         return depthState.getValue();
     }
 
-    @Override
-    public String getAttribute(final String name) {
+    public String getAttribute(String name) {
         return depthState.getAttribute(name);
     }
 
-    @Override
-    public String getAttribute(final int index) {
+    public String getAttribute(int index) {
         return depthState.getAttribute(index);
     }
 
-    @Override
     public int getAttributeCount() {
         return depthState.getAttributeCount();
     }
 
-    @Override
-    public String getAttributeName(final int index) {
+    public String getAttributeName(int index) {
         return depthState.getAttributeName(index);
     }
 
-    @Override
-    public Iterator<String> getAttributeNames() {
+    public Iterator getAttributeNames() {
         return depthState.getAttributeNames();
     }
 
-    @Override
     public void moveDown() {
         depthState.push();
-        final Token firstToken = readToken();
+        Token firstToken = readToken();
         switch (firstToken.getType()) {
-        case Token.TYPE_START_NODE:
-            depthState.setName(idRegistry.get(firstToken.getId()));
-            break;
-        default:
-            throw new StreamException("Expected StartNode");
+            case Token.TYPE_START_NODE:
+                depthState.setName(idRegistry.get(firstToken.getId()));
+                break;
+            default:
+                throw new StreamException("Expected StartNode");
         }
         while (true) {
-            final Token nextToken = readToken();
+            Token nextToken = readToken();
             switch (nextToken.getType()) {
-            case Token.TYPE_ATTRIBUTE:
-                depthState.addAttribute(idRegistry.get(nextToken.getId()), nextToken.getValue());
-                break;
-            case Token.TYPE_VALUE:
-                depthState.setValue(nextToken.getValue());
-                break;
-            case Token.TYPE_END_NODE:
-                depthState.setHasMoreChildren(false);
-                pushBack(nextToken);
-                return;
-            case Token.TYPE_START_NODE:
-                depthState.setHasMoreChildren(true);
-                pushBack(nextToken);
-                return;
-            default:
-                throw new StreamException("Unexpected token " + nextToken);
+                case Token.TYPE_ATTRIBUTE:
+                    depthState.addAttribute(idRegistry.get(nextToken.getId()), nextToken.getValue());
+                    break;
+                case Token.TYPE_VALUE:
+                    depthState.setValue(nextToken.getValue());
+                    break;
+                case Token.TYPE_END_NODE:
+                    depthState.setHasMoreChildren(false);
+                    pushBack(nextToken);
+                    return;
+                case Token.TYPE_START_NODE:
+                    depthState.setHasMoreChildren(true);
+                    pushBack(nextToken);
+                    return;
+                default:
+                    throw new StreamException("Unexpected token " + nextToken);
             }
         }
     }
 
-    @Override
     public void moveUp() {
         depthState.pop();
         // We're done with this depth. Skip over all tokens until we get to the end.
         int depth = 0;
         slurp:
         while (true) {
-            final Token nextToken = readToken();
-            switch (nextToken.getType()) {
-            case Token.TYPE_END_NODE:
-                if (depth == 0) {
-                    break slurp;
-                } else {
-                    depth--;
-                }
-                break;
-            case Token.TYPE_START_NODE:
-                depth++;
-                break;
-            default:
-                // Ignore other tokens
+            Token nextToken = readToken();
+            switch(nextToken.getType()) {
+                case Token.TYPE_END_NODE:
+                    if (depth == 0) {
+                        break slurp;
+                    } else {
+                        depth--;
+                    }
+                    break;
+                case Token.TYPE_START_NODE:
+                    depth++;
+                    break;
+                default:
+                    // Ignore other tokens
             }
         }
         // Peek ahead to determine if there are any more kids at this level.
-        final Token nextToken = readToken();
-        switch (nextToken.getType()) {
-        case Token.TYPE_END_NODE:
-            depthState.setHasMoreChildren(false);
-            break;
-        case Token.TYPE_START_NODE:
-            depthState.setHasMoreChildren(true);
-            break;
-        default:
-            throw new StreamException("Unexpected token " + nextToken);
+        Token nextToken = readToken();
+        switch(nextToken.getType()) {
+            case Token.TYPE_END_NODE:
+                depthState.setHasMoreChildren(false);
+                break;
+            case Token.TYPE_START_NODE:
+                depthState.setHasMoreChildren(true);
+                break;
+            default:
+                throw new StreamException("Unexpected token " + nextToken);
         }
         pushBack(nextToken);
     }
@@ -160,25 +150,25 @@ public class BinaryStreamReader implements ExtendedHierarchicalStreamReader {
     private Token readToken() {
         if (pushback == null) {
             try {
-                final Token token = tokenFormatter.read(in);
+                Token token = tokenFormatter.read(in);
                 switch (token.getType()) {
-                case Token.TYPE_MAP_ID_TO_VALUE:
-                    idRegistry.put(token.getId(), token.getValue());
-                    return readToken(); // Next one please.
-                default:
-                    return token;
+                    case Token.TYPE_MAP_ID_TO_VALUE:
+                        idRegistry.put(token.getId(), token.getValue());
+                        return readToken(); // Next one please.
+                    default:
+                        return token;
                 }
-            } catch (final IOException e) {
+            } catch (IOException e) {
                 throw new StreamException(e);
             }
         } else {
-            final Token result = pushback;
+            Token result = pushback;
             pushback = null;
             return result;
         }
     }
 
-    public void pushBack(final Token token) {
+    public void pushBack(Token token) {
         if (pushback == null) {
             pushback = token;
         } else {
@@ -187,16 +177,14 @@ public class BinaryStreamReader implements ExtendedHierarchicalStreamReader {
         }
     }
 
-    @Override
     public void close() {
         try {
             in.close();
-        } catch (final IOException e) {
+        } catch (IOException e) {
             throw new StreamException(e);
         }
     }
 
-    @Override
     public String peekNextChild() {
         if (depthState.hasMoreChildren()) {
             return idRegistry.get(pushback.getId());
@@ -204,26 +192,24 @@ public class BinaryStreamReader implements ExtendedHierarchicalStreamReader {
         return null;
     }
 
-    @Override
     public HierarchicalStreamReader underlyingReader() {
         return this;
     }
 
-    @Override
-    public void appendErrors(final ErrorWriter errorWriter) {
+    public void appendErrors(ErrorWriter errorWriter) {
         // TODO: When things go bad, it would be good to know where!
     }
 
     private static class IdRegistry {
 
-        private final Map<Long, String> map = new HashMap<Long, String>();
+        private Map map = new HashMap();
 
-        public void put(final long id, final String value) {
-            map.put(Long.valueOf(id), value);
+        public void put(long id, String value) {
+            map.put(new Long(id), value);
         }
 
-        public String get(final long id) {
-            final String result = map.get(Long.valueOf(id));
+        public String get(long id) {
+            String result = (String) map.get(new Long(id));
             if (result == null) {
                 throw new StreamException("Unknown ID : " + id);
             } else {
