@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2006 Joe Walnes.
- * Copyright (C) 2006, 2007, 2014 XStream Committers.
+ * Copyright (C) 2006, 2007 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -11,16 +11,15 @@
  */
 package com.thoughtworks.xstream.io.binary;
 
-import java.io.DataOutputStream;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.util.HashMap;
-import java.util.Map;
-
-import com.thoughtworks.xstream.io.ExtendedHierarchicalStreamWriter;
 import com.thoughtworks.xstream.io.HierarchicalStreamWriter;
 import com.thoughtworks.xstream.io.StreamException;
+import com.thoughtworks.xstream.io.ExtendedHierarchicalStreamWriter;
 
+import java.io.DataOutputStream;
+import java.io.OutputStream;
+import java.io.IOException;
+import java.util.Map;
+import java.util.HashMap;
 
 /**
  * @since 1.2
@@ -31,62 +30,54 @@ public class BinaryStreamWriter implements ExtendedHierarchicalStreamWriter {
     private final DataOutputStream out;
     private final Token.Formatter tokenFormatter = new Token.Formatter();
 
-    public BinaryStreamWriter(final OutputStream outputStream) {
+    public BinaryStreamWriter(OutputStream outputStream) {
         out = new DataOutputStream(outputStream);
     }
 
-    @Override
-    public void startNode(final String name) {
+    public void startNode(String name) {
         write(new Token.StartNode(idRegistry.getId(name)));
     }
 
-    @Override
-    public void startNode(final String name, final Class<?> clazz) {
+    public void startNode(String name, Class clazz) {
         startNode(name);
     }
 
-    @Override
-    public void addAttribute(final String name, final String value) {
+    public void addAttribute(String name, String value) {
         write(new Token.Attribute(idRegistry.getId(name), value));
     }
 
-    @Override
-    public void setValue(final String text) {
+    public void setValue(String text) {
         write(new Token.Value(text));
     }
 
-    @Override
     public void endNode() {
         write(new Token.EndNode());
     }
 
-    @Override
     public void flush() {
         try {
             out.flush();
-        } catch (final IOException e) {
+        } catch (IOException e) {
             throw new StreamException(e);
         }
     }
 
-    @Override
     public void close() {
         try {
             out.close();
-        } catch (final IOException e) {
+        } catch (IOException e) {
             throw new StreamException(e);
         }
     }
 
-    @Override
     public HierarchicalStreamWriter underlyingWriter() {
         return this;
     }
 
-    private void write(final Token token) {
+    private void write(Token token) {
         try {
             tokenFormatter.write(out, token);
-        } catch (final IOException e) {
+        } catch (IOException e) {
             throw new StreamException(e);
         }
     }
@@ -94,12 +85,12 @@ public class BinaryStreamWriter implements ExtendedHierarchicalStreamWriter {
     private class IdRegistry {
 
         private long nextId = 0;
-        private final Map<String, Long> ids = new HashMap<String, Long>();
+        private Map ids = new HashMap();
 
-        public long getId(final String value) {
-            Long id = ids.get(value);
+        public long getId(String value) {
+            Long id = (Long) ids.get(value);
             if (id == null) {
-                id = Long.valueOf(++nextId);
+                id = new Long(++nextId);
                 ids.put(value, id);
                 write(new Token.MapIdToValue(id.longValue(), value));
             }
